--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   color: #fff;
 }
 
+
 .fa-phone-alt {
   margin-right: 60px;
   margin-left: 60px;
@@ -47,7 +48,7 @@ body {
   margin-left: 10px;
   background-color: #fff;
   color: #000;
-  padding: 5px;
+  padding: 5px 20px;
   border-radius: 5px;
   border: none;
 }
@@ -95,6 +96,7 @@ body {
 
 .header_wrapper i {
   margin-top: 14px;
+  color: #01438A;
 }
 
 /* home page */
@@ -110,7 +112,7 @@ body {
 
 .homepage-content p {
   color: #000;
-  font-weight: bold;
+  
 }
 /* .homepage-img {
   width: 60vh;
@@ -120,6 +122,12 @@ body {
 .homepage-content .btn {
   background-color: #01438a;
   color: #fff;
+}
+.homepage-content .btn:hover{
+  background-color: #fff;
+  border: 2px solid #01438A;
+  color: #01438A;
+  transition: linear 1s ease-in;
 }
 
 .carousel-item img {
@@ -154,7 +162,7 @@ body {
   color: #000;
   font-size: 0.9rem;
   margin-right: 50px;
-  font-weight: bold;
+ 
 }
 /* services */
 .services {
@@ -198,27 +206,30 @@ body {
 }
 /* bed */
 .bed {
-  background: linear-gradient(100.55deg, #cbe5ff -0.29%, #f0f6fb 100.13%);
   padding-bottom: 10px;
   margin-top: 20px;
+  background-color:#F0F6FB;
 }
 
 .bed-content {
   color: #01438a;
   margin-right: 50px;
+ 
+
 }
 .bed-content h1 {
   font-size: 1.3rem;
   font-weight: bold;
 }
 .bed-content .p1 {
-  color: #01438a;
-  font-weight: bold;
+  
   font-size: 1rem;
+  color: #006FDE;
 }
+
 .bed-content p {
   color: #000;
-  font-weight: bold;
+  
 }
 .bed-img {
   width: 350px;
@@ -229,6 +240,13 @@ body {
   background-color: #01438a;
   color: #fff;
 }
+
+.bed-content .btn:hover{
+  background-color: #fff;
+  border: 2px solid #01438A;
+  color: #01438A;
+  transition: linear 1s ease-in;
+}
 .bed-icon {
   margin-top: 150px;
   margin-left: 10px;
@@ -236,16 +254,17 @@ body {
 
 /* catalouge */
 .catalogues {
-  background: linear-gradient(100.55deg, #cbe5ff -0.29%, #f0f6fb 100.13%);
+  background-color:#F0F6FB;
 }
 
 .catalogues a {
   margin-top: 30px;
   font-size: 1rem;
+  color: #006FDE;
 }
 .catalogues h2 {
+  color: #006FDE;
   text-align: center;
-  color: #01438a;
   margin-bottom: 30px;
   font-weight: bold;
 }
@@ -253,18 +272,43 @@ body {
   width: 80%;
 }
 .catalogues-text h4 {
-  color: #01438a;
+  color: #01438A;
   margin-top: 20px;
   font-weight: bold;
   font-size: 1.5rem;
 }
-.catalogues-text p {
+.catalogues-text a {
   color: rgb(99, 208, 252);
   font-size: 0.9rem;
   margin-right: 50px;
   font-weight: bold;
+  display: flex;
+  text-decoration: none;
+  margin-top: 50px;
+}
+.catalogues-text2 h4 {
+  color: #01438A;
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+.catalogues-text2 a {
+  color: rgb(99, 208, 252);
+  font-size: 0.9rem;
+  margin-right: 50px;
+  font-weight: bold;
+  display: flex;
+  text-decoration: none;
+
+}
+.catalogues-text a img{
+  margin-left: 20px;
 }
 
+.catalogues-text2 a img{
+  margin-left: 20px;
+  margin-bottom: 50px;
+}
 .catalogues-icon {
   margin-left: 280px;
   margin-top: -30px;
@@ -280,12 +324,12 @@ body {
 }
 /* hand */
 .hand {
-  background: linear-gradient(100.55deg, #cbe5ff -0.29%, #f0f6fb 100.13%);
+  background-color: #F0F6FB;
   padding-top: 30px;
   padding-bottom: 30px;
 }
 .hand-text h3 {
-  color: #01438a;
+  color: #006FDE;
   margin-top: 20px;
   font-weight: bold;
   font-size: 2rem;
@@ -294,25 +338,27 @@ body {
   color: #01438a;
   font-size: 0.9rem;
   margin-right: 50px;
-  font-weight: bold;
+  
 }
 .hand-text input {
-  padding: 5px 10px;
+  padding: 10px 10px;
   width: 50%;
-  border: none;
+  border: 1px solid #cbe5ff;
   box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
 }
+.hand-text input::placeholder{
+  color: #75A5D6;
+}
 .hand-text button {
-  padding: 5px 10px;
-  border: none;
+  padding: 10px 20px;
+   border: 1px solid #cbe5ff;
   background-color: #fff;
-  color: #01438a;
-  font-weight: bold;
+  color: #75A5D6;
   margin-left: 20px;
   box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
 }
 .hand-text .btn {
-  padding: 5px 10px;
+  padding: 10px 30px;
   border: none;
   background-color: #01438a;
   color: #fff;
@@ -320,13 +366,20 @@ body {
   margin-left: 20px;
   box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
 }
+
+.hand-text .btn:hover{
+  background-color: #fff;
+  border: 2px solid #01438A;
+  color: #01438A;
+  transition: linear 1s ease-in;
+}
 /* injury */
 .injury {
   margin-top: 30px;
   margin-bottom: 50px;
 }
 .injury h2 {
-  color: #01438a;
+  color: #006FDE;
   margin-bottom: 30px;
   font-weight: bold;
   margin-left: 120px;
@@ -335,7 +388,9 @@ body {
 .injury a {
   margin-top: 30px;
   font-size: 1rem;
+  color: #006FDE;
 }
+
 .injury-img img {
   width: 100%;
 }
@@ -349,10 +404,10 @@ body {
   color: #000;
   font-size: 0.9rem;
   margin-right: 50px;
-  font-weight: bold;
+ 
 }
 .injury-text .btn {
-  padding: 5px 10px;
+  padding: 10px 10px;
   border: none;
   background-color: #01438a;
   color: #fff;
@@ -360,10 +415,17 @@ body {
   margin-left: 20px;
   box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
 }
+
+.injury-text .btn:hover{
+  background-color: #fff;
+  border: 2px solid #01438A;
+  color: #01438A;
+  transition: linear 1s ease-in;
+}
 /* latest news */
 
 .latestnews h2 {
-  color: #01438a;
+  color: #006FDE;
   margin-bottom: 30px;
   font-weight: bold;
   margin-left: 120px;
@@ -372,6 +434,7 @@ body {
 .latestnews a {
   margin-top: 30px;
   font-size: 1rem;
+  color: #006FDE;
 }
 
 .latestnews-text h4 {
@@ -384,7 +447,7 @@ body {
   color: #000;
   font-size: 0.9rem;
   margin-right: 50px;
-  font-weight: bold;
+  
 }
 .latestnews .latestnews-text a {
   font-weight: bold;
@@ -396,7 +459,7 @@ body {
   margin-top: 30px;
 }
 .stay-text h4 {
-  color: #01438a;
+  color: #006FDE;
   margin-top: 20px;
   font-weight: bold;
   font-size: 1.5rem;
@@ -405,7 +468,7 @@ body {
   color: #000;
   font-size: 0.9rem;
   margin-right: 50px;
-  font-weight: bold;
+  
 }
 .stay-input {
   margin-top: 50px;
@@ -415,33 +478,52 @@ body {
   background-color: #fff;
   margin-right: 10px;
   border: none;
-  padding: 5px 0px;
+  padding: 10px 0px;
+ border: 1px solid #cbe5ff;
+}
+
+.stay-input input::placeholder{
+ color:#75A5D6;
 }
 .stay-input .btn {
-  padding: 5px 10px;
+  padding: 10px 20px;
   background-color: #01438a;
   color: #fff;
   border: none;
+}
+.stay-input .btn:hover{
+  background-color: #fff;
+  border: 2px solid #01438A;
+  color: #01438A;
+  transition: linear 1s ease-in;
 }
 /* do */
 
 .do {
   margin-top: 40px;
 }
+
+.do h2{
+ color: #006FDE;
+  margin-bottom: 30px;
+  font-weight: bold;
+ 
+  text-align: center;
+}
 .do-text i {
-  color: #01438a;
+   color: #006FDE;
 }
 .do-text p {
   color: #000;
   font-size: 0.9rem;
   margin-right: 50px;
-  font-weight: bold;
+ 
 }
 .do-text .p {
   color: #75a5d6;
   font-size: 0.9rem;
   margin-right: 50px;
-  font-weight: bold;
+  
 }
 /* image */
 .images {
@@ -450,11 +532,33 @@ body {
 .image {
   padding: 0px 30px;
 }
+
+.google{
+  display: flex;
+  border-top: 3px solid  #28B446;
+;
+}
+.google-img{
+  margin-top: 20px;
+}
+.google-text{
+  margin-left: 20px;
+}
+.google-text i{ 
+  color: #E5702A;
+}
+.google-text p{
+  font-size: .8rem;
+  color: #757576;
+
+}
 /* info */
 .info {
   background: linear-gradient(100.55deg, #cbe5ff -0.29%, #f0f6fb 100.13%);
   padding: 40px;
   margin-top: 30px;
+  background: #F0F6FB;
+
 }
 .info-text h4 {
   color: #01438a;
@@ -462,38 +566,44 @@ body {
   font-weight: bold;
   font-size: 1.5rem;
 }
-.info-text p {
+.info-text a {
+  display: flex;
   color: #000;
   font-size: 0.9rem;
-  margin-right: 50px;
-  font-weight: bold;
+  margin-right: 0px;
+  text-decoration: none;
 }
 .info-text a {
-  font-size: 0.9rem;
-  font-weight: bold;
+  font-size: 1rem;
+  
 }
 .info-text .footericon {
+  margin-top: 20px;
+}
+.info-text .contact{
+  color: #006FDE;
   margin-top: 20px;
 }
 /* location */
 .location {
   margin-top: 40px;
+  margin-bottom: 30px;
 }
 .location-img img {
   margin-top: 20px;
 }
 
 .location-text h4 {
-  color: #01438a;
+  color: #006FDE;
   margin-top: 20px;
-  font-weight: bold;
   font-size: 1.5rem;
 }
-.location-text p {
+.location-text a {
+  display: flex;
   color: #000;
-  font-size: 0.9rem;
-  margin-right: 50px;
-  font-weight: bold;
+  font-size: 0.8rem;
+  margin-right: 0px;
+  text-decoration: none;
 }
 /* footerp */
 .footerp {
@@ -505,7 +615,7 @@ body {
   color: #000;
   font-size: 0.9rem;
   margin-right: 50px;
-  font-weight: bold;
+ 
 }
 /* footer */
 .footer {
@@ -521,10 +631,10 @@ body {
   color: #01438a;
   font-weight: bolder;
 }
-.footertext p {
+.footertext a {
   margin-left: 40px;
   color: #01438a;
-  font-weight: bold;
+  text-decoration: none;
 }
 .footerimg img {
   width: 150px;
