--- a/style.css
+++ b/style.css
@@ -209,12 +209,13 @@ body {
   padding-bottom: 10px;
   margin-top: 20px;
   background-color:#F0F6FB;
+  
 }
 
 .bed-content {
   color: #01438a;
   margin-right: 50px;
- 
+ margin-bottom: 60px;
 
 }
 .bed-content h1 {
