--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
   margin-top: 5px;
   margin-left: 10px;
   background-color: #fff;
-  color: #000;
+  color: #002B64;
   padding: 5px 20px;
   border-radius: 5px;
   border: none;
