--- a/style.scss
+++ b/style.scss
@@ -1,16 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins%3Awght%40300%3B400%3B500%3B600%3B700%3B800%3B900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand%3Awght%40300%3B400%3B500%3B600%3B700&display=swap");
 
-
-
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-
-// variables
-$bg-color: #01438a;
 
 body {
     overflow-x: hidden;
@@ -31,9 +27,14 @@ body {
 .top {
     background: #01438a;
     padding: 10px;
+    display: flex;
+        justify-content: center;
+        align-items: center;
 }
 
 .top .p {
+    display: -webkit-box;
+        display: -ms-flexbox;
     display: flex;
     color: #fff;
     margin-top: 10px;
@@ -41,31 +42,38 @@ body {
 
 .top .p img {
     height: 30px;
+
 }
 
 .top .p p {
     margin-left: 20px;
-    font-weight: bold;
+    color: #CBE5FF;
 }
 
 .top .icon {
-    color: #fff;
+    line-height: 16.94px;
+        text-align: left;
+        color: #CBE5FF;
+        display: flex;
+        margin-top: 0px;
 }
 
-
-.fa-phone-alt {
-    margin-right: 60px;
-    margin-left: 60px;
+.top .icon p {
+    margin-right: 50px;
+    margin-top: 10px;
 }
 
-.top button {
-    margin-top: 5px;
-    margin-left: 10px;
+.top .icon i {
+    margin-right: 10px;
+}
+
+.top-header-button {
     background-color: #fff;
-    color: #000;
-    padding: 5px 20px;
-    border-radius: 5px;
+    color: #002B64;
+        padding: 0px 20px;
+        border-radius: 3px;
     border: none;
+    font-weight: 400;
 }
 
 /* navbar */
@@ -80,6 +88,7 @@ body {
 }
 
 .header_wrapper .navbar-toggler:focus {
+    -webkit-box-shadow: none;
     box-shadow: none;
 }
 
@@ -121,13 +130,13 @@ body {
 .homepage {
     background: linear-gradient(100.55deg, #cbe5ff -0.29%, #f0f6fb 100.13%);
     padding-bottom: 20px;
-
 }
 
 .homepage-content h1 {
     background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    font-weight: bold;
 }
 
 .homepage-content {
@@ -136,7 +145,6 @@ body {
 
 .homepage-content p {
     color: #000;
-
 }
 
 /* .homepage-img {
@@ -154,6 +162,7 @@ body {
     background-color: #fff;
     border: 2px solid #01438A;
     color: #01438A;
+    -webkit-transition: linear 1s ease-in;
     transition: linear 1s ease-in;
 }
 
@@ -174,10 +183,11 @@ body {
 
 .specialist h2 {
     text-align: center;
-    color: $bg-color;
     margin-bottom: 30px;
     font-weight: bold;
-
+    background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
 }
 
 .specialist-img img {
@@ -187,13 +197,13 @@ body {
 .specialist-text h4 {
     margin-top: 20px;
     font-weight: bold;
+    color: #002B64;
 }
 
 .specialist-text p {
     color: #000;
     font-size: 0.9rem;
     margin-right: 50px;
-
 }
 
 /* services */
@@ -203,9 +213,11 @@ body {
 
 .services h2 {
     text-align: center;
-    color: #01438a;
     margin-bottom: 30px;
     font-weight: bold;
+    background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
 }
 
 .services .box {
@@ -231,11 +243,15 @@ body {
     text-align: center;
     font-weight: bold;
     margin-top: 30px;
-    color: $bg-color;
+    background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
 }
 
 .brand a {
-    font-size: 1rem;
+    font-size: .9rem;
+        color: #006FDE;
+        border-bottom: 1px solid #CBE5FF;
 }
 
 .our-brand-slider {
@@ -247,18 +263,17 @@ body {
     padding-bottom: 10px;
     margin-top: 20px;
     background-color: #F0F6FB;
-
 }
 
 .bed-content {
     color: #01438a;
     margin-right: 50px;
     margin-bottom: 60px;
-
+    margin-left: 20px;
 }
 
 .bed-content h1 {
-    font-size: 1.3rem;
+    font-size: 1.7rem;
     font-weight: bold;
     background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
     background-clip: text;
@@ -266,20 +281,16 @@ body {
 }
 
 .bed-content .p1 {
-
-    font-size: 1rem;
+    font-size: .8rem;
     color: #006FDE;
 }
 
 .bed-content p {
     color: #000;
-
 }
 
 .bed-img {
-    width: 350px;
-    height: 150px;
-    margin-top: 30px;
+    width: 100%;
 }
 
 .bed-content .btn {
@@ -292,6 +303,7 @@ body {
     background-color: #fff;
     border: 2px solid #01438A;
     color: #01438A;
+    -webkit-transition: linear 1s ease-in;
     transition: linear 1s ease-in;
 }
 
@@ -300,6 +312,9 @@ body {
     margin-left: 10px;
 }
 
+.bed hr {
+    border: 1px solid #BFD4E5
+}
 /* catalouge */
 .catalogues {
     background-color: #F0F6FB;
@@ -307,18 +322,26 @@ body {
 
 .catalogues a {
     margin-top: 30px;
-    font-size: 1rem;
+    font-size: .9rem;
     color: #006FDE;
+    ;
+    }
+    
+    .catalogues h2 a {
+        color: #01438A;
+        margin-top: 30px;
+        margin-left: 20px;
+        font-size: .9rem;
+        border-bottom: 1px solid #CBE5FF;
 }
 
 .catalogues h2 {
-    text-align: center;
+    margin-left: 120px;
     margin-bottom: 30px;
     background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
-
 }
 
 .catalogues-img img {
@@ -333,13 +356,14 @@ body {
 }
 
 .catalogues-text a {
-    color: rgb(99, 208, 252);
     font-size: 0.9rem;
     margin-right: 50px;
-
+    display: -webkit-box;
+        display: -ms-flexbox;
     display: flex;
     text-decoration: none;
     margin-top: 50px;
+    color: #006FDE;
 }
 
 .catalogues-text2 h4 {
@@ -350,13 +374,13 @@ body {
 }
 
 .catalogues-text2 a {
-    color: rgb(99, 208, 252);
     font-size: 0.9rem;
     margin-right: 50px;
-
+    display: -webkit-box;
+        display: -ms-flexbox;
     display: flex;
     text-decoration: none;
-
+    color: #006FDE;
 }
 
 .catalogues-text a img {
@@ -383,6 +407,9 @@ body {
     margin-top: -30px;
 }
 
+.catalogues hr {
+    border: 1px solid #BFD4E5
+}
 /* hand */
 .hand {
     background-color: #F0F6FB;
@@ -390,6 +417,9 @@ body {
     padding-bottom: 90px;
 }
 
+.hand-text {
+    margin-left: 30px;
+}
 .hand-text h3 {
     background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
     background-clip: text;
@@ -397,33 +427,50 @@ body {
     margin-top: 20px;
     font-weight: bold;
     font-size: 2rem;
-
 }
 
 .hand-text p {
     color: #01438a;
     font-size: 0.9rem;
     margin-right: 50px;
-
+    font-weight: 400;
 }
 
 .hand-text input {
     padding: 10px 10px;
     width: 50%;
     border: 1px solid #cbe5ff;
+    -webkit-box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
     box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
 }
 
+.hand-text input::-webkit-input-placeholder {
+    color: #75A5D6;
+    font-weight: 500;
+}
+
+.hand-text input:-ms-input-placeholder {
+    color: #75A5D6;
+    font-weight: 500;
+}
+
+.hand-text input::-ms-input-placeholder {
+    color: #75A5D6;
+    font-weight: 500;
+}
 .hand-text input::placeholder {
     color: #75A5D6;
+    font-weight: 500;
 }
 
 .hand-text button {
     padding: 10px 30px;
     border: 1px solid #cbe5ff;
     background-color: #fff;
-    color: #75A5D6;
+    font-weight: 500;
+        color: #01438A;
     margin-left: 20px;
+    -webkit-box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
     box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
 }
 
@@ -432,8 +479,9 @@ body {
     border: none;
     background-color: #01438a;
     color: #fff;
-    font-weight: bold;
+    font-weight: 400;
     margin-left: 20px;
+    -webkit-box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
     box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
 }
 
@@ -441,19 +489,18 @@ body {
     background-color: #fff;
     border: 2px solid #01438A;
     color: #01438A;
+    -webkit-transition: linear 1s ease-in;
     transition: linear 1s ease-in;
 }
 
 /* injury */
 .injury {
     margin-top: 30px;
-    margin-bottom: 80px;
 }
 
 .injury h2 {
-
     margin-bottom: 30px;
-    font-weight: bold;
+    font-weight: 700;
     margin-left: 120px;
     background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
     background-clip: text;
@@ -462,8 +509,12 @@ body {
 
 .injury a {
     margin-top: 30px;
-    font-size: 1rem;
+    font-size: .9rem;
+        font-weight: 400;
+        text-decoration: underline;
+        margin-left: 30px;
     color: #006FDE;
+    border-bottom: 1px solid #006FDE
 }
 
 .injury-img img {
@@ -471,8 +522,13 @@ body {
     margin-top: 20px;
 }
 
+.injury-text {
+    margin-left: 40px;
+}
 .injury-text h4 {
-    color: #01438a;
+    background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
     margin-top: 20px;
     font-weight: bold;
     font-size: 1.5rem;
@@ -482,7 +538,6 @@ body {
     color: #000;
     font-size: 0.9rem;
     margin-right: 50px;
-
 }
 
 .injury-text .btn {
@@ -492,6 +547,7 @@ body {
     color: #fff;
     font-weight: bold;
     margin-left: 0px;
+    -webkit-box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
     box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
     margin-bottom: 50px;
 }
@@ -500,44 +556,58 @@ body {
     background-color: #fff;
     border: 2px solid #01438A;
     color: #01438A;
+    -webkit-transition: linear 1s ease-in;
     transition: linear 1s ease-in;
 }
 
+.injury hr {
+    border: 1px solid #006FDE;
+    margin-top: 80px;
+}
 /* latest news */
-
 .latestnews h2 {
-
     margin-bottom: 30px;
     background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-left: 120px;
+    font-weight: 700;
+    }
+    
+    .latestnews h2 a {
+        margin-left: 30px;
+        border-bottom: 1px solid #006FDE;
 }
 
 .latestnews a {
     margin-top: 30px;
-    font-size: 1rem;
+    font-size: .9rem;
     color: #006FDE;
-
+    font-weight: 400;
 }
 
 .latestnews-text h4 {
-    color: #01438a;
     margin-top: 20px;
-
     font-size: 1.5rem;
+    font-weight: 700;
+        color: #01438A;
 }
 
 .latestnews-text p {
     color: #000;
     font-size: 0.9rem;
     margin-right: 50px;
+    font-weight: 400;
+    }
 
+.latestnews-text a {
+    color: #006FDE;
+    text-decoration: none;
+    font-weight: 500;
 }
 
 /* stay */
 .stay {
-
     padding: 40px;
     background: #F0F6FB;
     margin-top: 30px;
@@ -557,7 +627,6 @@ body {
     color: #000;
     font-size: 0.9rem;
     margin-right: 50px;
-
 }
 
 .stay-input {
@@ -573,6 +642,17 @@ body {
     border: 1px solid #cbe5ff;
 }
 
+.stay-input input::-webkit-input-placeholder {
+    color: #75A5D6;
+}
+
+.stay-input input:-ms-input-placeholder {
+    color: #75A5D6;
+}
+
+.stay-input input::-ms-input-placeholder {
+    color: #75A5D6;
+}
 .stay-input input::placeholder {
     color: #75A5D6;
 }
@@ -588,17 +668,19 @@ body {
     background-color: #fff;
     border: 2px solid #01438A;
     color: #01438A;
+    -webkit-transition: linear 1s ease-in;
     transition: linear 1s ease-in;
 }
 
 /* do */
-
 .do {
     margin-top: 40px;
 }
 
 .do h2 {
-    color: #006FDE;
+    background: linear-gradient(100.55deg, #006FDE -0.29%, #002B64 100.13%);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
     margin-bottom: 30px;
     font-weight: bold;
     text-align: center;
@@ -613,14 +695,18 @@ body {
     color: #000;
     font-size: 0.9rem;
     margin-right: 50px;
-
+    font-weight: 400;
 }
 
 .do-text .p {
     color: #75a5d6;
     font-size: 0.9rem;
     margin-right: 50px;
+    font-weight: 400;
+    }
 
+.do hr {
+    border: 1px solid #CBE5FF;
 }
 
 /* image */
@@ -633,9 +719,10 @@ body {
 }
 
 .google {
+    display: -webkit-box;
+        display: -ms-flexbox;
     display: flex;
     border-top: 3px solid #28B446;
-    ;
 }
 
 .google-img {
@@ -653,7 +740,6 @@ body {
 .google-text p {
     font-size: .8rem;
     color: #757576;
-
 }
 
 /* info */
@@ -662,7 +748,6 @@ body {
     padding: 40px;
     margin-top: 30px;
     background: #F0F6FB;
-
 }
 
 .info-text h4 {
@@ -670,30 +755,39 @@ body {
     background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-top: 20px;
-    font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 15px;
+        font-weight: 700;
+        line-height: 18.15px;
+        text-align: left;
 }
 
-.info-text a {
+.info .info-text a {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    color: #000;
-    font-size: 0.9rem;
+    font-size: .8rem;
     margin-right: 0px;
     text-decoration: none;
+    color: #4B4B4B;
+        font-weight: 400;
 }
 
 .info-text a {
     font-size: 1rem;
-
 }
 
 .info-text .footericon {
     margin-top: 20px;
 }
 
-.info-text .contact {
-    color: #006FDE;
+.info-text a.contact {
     margin-top: 20px;
+    font-size: 14px;
+        font-weight: 400;
+        line-height: 28px;
+        text-align: left;
+        color: #006FDE;
+        border-bottom: 1px solid #C3DCF2;
 }
 
 /* location */
@@ -707,14 +801,20 @@ body {
 }
 
 .location-text h4 {
+    font-size: 14px;
+        font-weight: 700;
+        line-height: 28px;
+        text-align: left;
     color: #006FDE;
     margin-top: 20px;
-    font-size: 1.5rem;
 }
 
 .location-text a {
+    display: -webkit-box;
+        display: -ms-flexbox;
     display: flex;
-    color: #000;
+    font-weight: 400;
+        color: #4B4B4B;
     font-size: 0.8rem;
     margin-right: 0px;
     text-decoration: none;
@@ -727,10 +827,9 @@ body {
 }
 
 .text p {
-    color: #000;
+    color: #4B4B4B;
     font-size: 0.9rem;
     margin-right: 50px;
-
 }
 
 /* footer */
@@ -741,6 +840,8 @@ body {
 }
 
 .footertext {
+    display: -webkit-box;
+        display: -ms-flexbox;
     display: flex;
     padding-top: 40px;
 }
@@ -759,3 +860,4 @@ body {
 .footerimg img {
     width: 150px;
 }
+/*# sourceMappingURL=style.css.map */
