--- a/style.css
+++ b/style.css
@@ -152,11 +152,7 @@ margin-top:0px;
   color: #000;
 }
 
-/* .homepage-img {
-  width: 60vh;
-  margin-left: 200px;
-  margin-top: 30px;
-} */
+
 .homepage-content .btn {
   background-color: #01438a;
   color: #fff;
@@ -171,6 +167,10 @@ margin-top:0px;
   transition: linear 1s ease-in;
 }
 
+.homepage .carousel-item{
+  -webkit-transition: all 2s ease;
+  transition: all 2s ease;
+}
 .carousel-item img {
   width: 500px;
   height: 300px;
@@ -184,9 +184,12 @@ margin-top:0px;
 /* specialist */
 .specialist {
   margin-top: 30px;
+   display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.specialist h2 {
+.specialist-heading h2 {
   text-align: center;
   margin-bottom: 30px;
   font-weight: bold;
@@ -196,7 +199,7 @@ margin-top:0px;
 }
 
 .specialist-img img {
-  width: 80%;
+  width: 100%;
 }
 
 .specialist-text h4 {
@@ -209,6 +212,11 @@ margin-top:0px;
   color: #000;
   font-size: 0.9rem;
   margin-right: 50px;
+}
+
+.specialist .feedback img {
+  width: 40px;
+  
 }
 
 /* services */
