--- a/responsive.css
+++ b/responsive.css
@@ -237,6 +237,37 @@
 }
 
 @media (max-width: 540px) {
+
+  .top .p p {
+    margin-left: 10px;
+  }
+  .top .icon p{
+    display: flex;
+   
+  }
+.top .icon {
+font-size: .8rem;
+}
+
+.top .icon i{
+  margin-right:5px;
+  margin-top: 2px;
+}
+.top .icon p{
+  text-wrap: nowrap;
+}
+.icon .top-btn{
+  display: block;
+  flex-direction: column;
+  display: inline;
+}
+
+.top-header-button {
+ padding: 5px;
+ text-wrap: nowrap;
+ display: none;
+}
+
   .specialist-img img {
     width: 100%;
   }
